objects/ChargentSFA__Account_Updater_Log__c.object
<CustomObject>
    <fields>
        <fullName>ChargentSFA__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Log_Message__c</fullName>
        <label>Log Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Opportunity_With_Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity With Error</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Updater Logs (Opportunity With Error)</relationshipLabel>
        <relationshipName>Opportunity_With_Error</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Updater Logs</relationshipLabel>
        <relationshipName>Account_Updater_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Updater Log</label>
    <listViews>
        <fullName>ChargentSFA__All_Account_Updater_Logs</fullName>
        <columns>NAME</columns>
        <columns>ChargentSFA__Billing_Email__c</columns>
        <columns>ChargentSFA__Date_Sent__c</columns>
        <columns>ChargentSFA__Opportunity__c</columns>
        <columns>ChargentSFA__Opportunity_With_Error__c</columns>
        <columns>ChargentSFA__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AUL-{0000}</displayFormat>
        <label>Account Updater Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Updater Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>